fixed border countries alignment

--- a/rest-countries/src/styles/expandedCountry.scss
+++ b/rest-countries/src/styles/expandedCountry.scss
@@ -27,6 +27,7 @@
         & .country-border-c {
             margin-top: 4rem;
             display: flex;
+            align-items: center;
             & .borders-label {
                 text-wrap: nowrap;
                 width: 20%;
